# python-ci-cd

./: pyproject.toml  setup.py
.github/workflows/: ci.yml
mypackage/: __init__.py  test_add.py
tests/: test_add.py
